Fix overflow content on overlay

--- a/style_projects.css
+++ b/style_projects.css
@@ -173,10 +173,6 @@ h1 {
         object-fit: cover; 
     }
 
-    .overlay-content {
-        max-height: 80vh; /* Limit the height of the container */
-        overflow: hidden; /* Hide overflow content */
-    }
 }
 
 @media (max-width: 480px) {
